PlantsAnalyzer: added translation of chemicals, improved visualization

--- a/Content.Client/Imperial/PlantsAnalyzer/UI/PlantsAnalyzerWindow.xaml
+++ b/Content.Client/Imperial/PlantsAnalyzer/UI/PlantsAnalyzerWindow.xaml
@@ -85,6 +85,8 @@
 
                 <Label Name="MutationsLabel" />
                 <Label Name="ChemicalsLabel" />
+
+                <Label Name="ChemicalsLabelWithLineBreaks" Text="" />
             </BoxContainer>
 
             <PanelContainer Name="AlertsDivider" Visible="False" StyleClasses="LowDivider" />
